[gd_scene load_steps=4 format=3 uid="uid://j640ftkccyin"]

[ext_resource type="Script" uid="uid://ydbsw6yqsrjn" path="res://scenes/load_menu.gd" id="1_load_menu"]
[ext_resource type="Theme" uid="uid://o6jbus45psrn" path="res://fonts/new_theme.tres" id="1_o70tx"]
[ext_resource type="Texture2D" uid="uid://b4ef20ehgalkh" path="res://images/Loadmenu.jpg" id="2_ff44e"]

[node name="LoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o70tx")
script = ExtResource("1_load_menu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ff44e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -300.0
offset_right = 800.0
offset_bottom = 300.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Load save file"
horizontal_alignment = 1

[node name="SlotsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Back"
